--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,236 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --black: 0, 0, 0;
+  --white: 255, 255, 255;
+  --darkgrey: rgb(21, 21, 21);
+  --grey-title: rgb(87, 87, 87);
+  --light-grey: rgb(165, 165, 165);
+  --greyline: 236, 236, 236;
+  --grey-gradient: linear-gradient(
+    to bottom,
+    rgb(var(--greyline)) 100%,
+    rgb(var(--greyline)) 0%
+  );
+}
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@font-face {
+  font-family: "Calisto MT";
+  src: url("../public/fonts/calisto.TTF") format("truetype");
+  font-weight: normal;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Albra";
+  src: url("../public/fonts/Albra.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Aeonik";
+  src: url("../public/fonts/Aeonik.otf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  src: url("../public/fonts/segoeui.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  src: url("../public/fonts/segoeuii.ttf");
+  font-weight: normal;
+  font-style: italic;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.inter {
+  font-family: "Inter", sans-serif;
+}
+.calisto {
+  font-family: "Calisto MT", sans-serif;
+  font-style: italic;
+}
+.albra {
+  font-family: "Albra", sans-serif;
+  font-style: normal;
+}
+.aeonik {
+  font-family: "Aeonik", sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-smooth: never;
+}
+.segoe {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-style: normal;
+}
+.segoeit {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-style: italic;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: var(--black);
+  background: var(--white);
+  max-width: 1440px;
+  margin: 0 auto;
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+.svgline {
+  top: -50px;
+  z-index: -3;
+  position: absolute;
+  display: block;
+  width: 1032px;
+  height: 100vh;
+}
+
+rect {
+  animation: swing 2s ease-in-out infinite;
+}
+
+.lineholder {
+  padding-left: -53px;
+  width: 1032px;
+  height: 100%;
+}
+.lightgrey {
+  color: var(--light-grey);
+}
+.darkgrey {
+  color: var(--darkgrey);
+}
+.greytitle {
+  color: var(--grey-title);
+}
+.ml-180 {
+  margin-left: 180px;
+}
+.px-180 {
+  padding-left: 36px;
+  padding-right: 36px;
+}
+.mt-124 {
+  margin-top: 48px;
+}
+.intro .paragraph {
+  max-width: 528px;
+  width: 100%;
+}
+.intro .title {
+  color: #a5a5a5;
+}
+
+.subheading {
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 2px;
+  color: #a0a5ac;
+}
+.heading {
+  font-size: 24px;
+  line-height: 32px;
+  color: #3b3d41;
+  letter-spacing: -0.28px;
+}
+.pheading {
+  font-size: 14px;
+  line-height: 21px;
+  color: #47494e;
+  font-weight: 400;
+}
+.projects {
+  padding-top: 64px;
+  padding-bottom: 64px;
+  border-bottom: 1px solid #dcdcdc;
+}
+.bottomtextcontainer {
+  padding-top: 64px;
+  display: grid;
+  grid-template-columns: 1fr; /* Les éléments passent les uns sous les autres par défaut */
+  column-gap: 62px;
+  row-gap: 48px;
+  max-width: 1080px; /* Taille maximale de la grille */
+  width: 100%; /* Prend 100% de la largeur disponible */
+  max-width: 500px; /* ajoutée */
+}
+.bloctext {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.paragraph {
+  line-height: 24px;
+  color: #3b3d41;
+  font-weight: 300;
+}
+.footer {
+  align-items: center;
+  margin-top: 32px;
+  margin-bottom: 32px;
+  align-items: flex-start;
+  row-gap: 48px;
+}
+.footersign {
+  width: 418px;
+}
+
+/*Responsive*/
+
+@media (min-width: 1024px) and (max-width: 1439px) {
+  .px-180 {
+    padding-left: 96px;
+    padding-right: 96px;
+  }
+  .mt-124 {
+    margin-top: 72px;
+  }
+  .bottomtextcontainer {
+    grid-template-columns: repeat(
+      2,
+      minmax(0, 1fr)
+    ); /* Répartition en 2 colonnes responsives */
+    width: 100%;
+    max-width: 1080px; /* ajoutée */
+    column-gap: 32px;
+  }
+  .bottomtextcontainer .paragraph {
+    padding-right: 24px;
+  }
+  .footer {
+    align-items: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    justify-content: space-between;
+  }
+}
+
+/* Breakpoint pour les écrans très larges (1440px et plus) */
+@media (min-width: 1440px) {
+  .px-180 {
+    padding-left: 206px;
+    padding-right: 206px;
+  }
+  .mt-124 {
+    margin-top: 124px;
+  }
+  .bottomtextcontainer {
+    grid-template-columns: 488px 488px; /* Taille fixe des colonnes */
+    width: 1080px; /* Taille totale de la grille */
+  }
+  .footer {
+    align-items: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    justify-content: space-between;
   }
 }
