--- a/app/css/Landing.module.css
+++ b/app/css/Landing.module.css
@@ -8,11 +8,10 @@
   display: grid;
   grid-template-columns: 1fr;
   column-gap: 20px;
-  row-gap: 96px;
-  max-width: 1080px;
+  row-gap: 48px;
   width: 100%;
-  max-width: 500px;
-  min-height: 100vh;
+  /* Assurez-vous que le conteneur ne limite pas la visibilité */
+  min-height: 100vh; /* Exemple pour forcer la hauteur du conteneur */
 }
 
 /* Breakpoint pour les écrans moyens (1024px et plus) */
