--- a/app/css/ButtonHoverEffect.module.css
+++ b/app/css/ButtonHoverEffect.module.css
@@ -31,10 +31,11 @@
   left: 0;
   background-color: rgb(244, 244, 244);
   transition: transform 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
-    opacity 0.4s ease-in-out;
+    width 0.4s cubic-bezier(0.25, 0.1, 0.25, 1),
+    height 0.4s cubic-bezier(0.25, 0.1, 0.25, 1), opacity 0.4s ease-in-out;
   z-index: 0;
   pointer-events: none;
-  border-radius: 8px; /* Just for better visual */
+  border-radius: 8px;
 }
 
 @media (max-width: 1024px) {
