--- a/app/css/ProjectHolder.module.css
+++ b/app/css/ProjectHolder.module.css
@@ -37,10 +37,9 @@
   object-fit: fill;
   width: 100%;
   border-radius: 16px;
-  box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.02);
   box-sizing: border-box;
-  outline: 1px solid #e5e5e5;
-  outline-offset: -1px;
+  outline: 1px solid #d4d4d4;
+  outline-offset: -1.5px;
   backface-visibility: hidden;
   will-change: transform;
   transform: translateZ(0);
@@ -96,7 +95,8 @@
   left: 0;
   width: 100%;
   height: 100%; /* Ensure the overlay stays within the bounds of the container */
-  border-radius: 12px;
+  padding: -20px;
+  border-radius: 16px;
   background-color: rgba(165, 165, 165, 0.2);
   display: flex;
   justify-content: center;
